samples/_failures_safe/1761436661_4bf8d0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_48df5d35.c: In function ‘main’:
./samples/SAFE/__tmp_48df5d35.c:145:22: error: expected ‘)’ at end of input
  145 |     if (!compress_rle
      |        ~             ^
      |                      )
./samples/SAFE/__tmp_48df5d35.c:145:5: error: expected declaration or statement at end of input
  145 |     if (!compress_rle
      |     ^~
